[gd_scene load_steps=5 format=3 uid="uid://iu0lr6xqjp3t"]

[ext_resource type="PackedScene" uid="uid://dq8m7vo5cdnvk" path="res://Player.tscn" id="1_glv2v"]
[ext_resource type="Script" uid="uid://ceevq763wdikp" path="res://main.gd" id="1_uu6xs"]
[ext_resource type="PackedScene" uid="uid://bifcqhfj4knfa" path="res://Mob.tscn" id="2_r0du0"]

[sub_resource type="Curve2D" id="Curve2D_glv2v"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 8, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 648, 0, 0, 0, 0, 0, 648, 0, 0, 0, 0, 0, 8)
}
point_count = 6

[node name="Main" type="Node2D"]
script = ExtResource("1_uu6xs")
mob_scene = ExtResource("2_r0du0")

[node name="Player" parent="." instance=ExtResource("1_glv2v")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(576, 304)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_glv2v")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(0, 8)
rotation = -1.5707964

[node name="ScoreTimer" type="Timer" parent="."]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
